--- a/gb/21/9/28/n13267497.md
+++ b/gb/21/9/28/n13267497.md
@@ -1,49 +1,75 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yvrwxa344/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yvrwxa344/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yvrwxa344/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center></h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/auytan380/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/auytan380/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/auytan380/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>新疫情模型公布 安省11月不可能完全解封</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2021/09/id13267501-CP127236257-600x400.jpg" />
+<h6>2021 年7月16日，人们在安省尼亚加拉大瀑布的一个室内游乐区兑现他们的游戏门票。（Peter Power /加通社）
+</h6>
+<hr>
+<p>【大纪元2021年09月29日讯】（大纪元记者王兰多伦多报导）为福特政府提供建议的一组科学家表示，第四波大流行似乎已经“趋于平缓”，但他们警告说，现在新模型表明，<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E5%AE%89%E7%9C%81.md#1">安省</a>11月不可能完全解封。</p>
+<p><ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E5%AE%89%E7%9C%81.md#1">安省</a>疫情科学咨询小组周二（9月28日）下午发布的最新疫情预测模型表明，如果省府维持现有的限制措施不变，新病例的 7 天滚动平均值有望在 10 月的大部分时间徘徊在 1,000 例/天以下，然后在 11 月初升至 1,500 例/天左右。</p>
+<p>科学咨询小组指，鉴于天气变冷，令更多人和活动在室内进行，加上学生回校上课，工人返回公司上班，造成非常不确定的情况，令未来个案估算的波幅极大。</p>
+<p>科学家表示，省府不可能按开放计划在11月完全解封，因为预测模型表示，如果省府取消大部分剩余的限制，到 11 月底，新病例数可能会超过 5,000例/天。</p>
+<p>在维持限制措施、更乐观的情况下，基于病毒传播减少 25%，病例数将稳步下降，到 11 月降至每天新增数百例。</p>
+<p>该科学小组曾在 9 月 1 日发布的预测模型中警告说，如果该省继续沿着当时的轨迹发展，到 10 月，每日病例数可能会达到每天 4,000 例。</p>
+<p>事实上，现在安省疫情发展更接近“最佳情况”，其 7 天新病例平均值现在为 606例/天 ，低于 9 月 1 日的 701例/天。</p>
+<h2>住院人数可能会上升但不会很快</h2>
+<p>随着由Delta变种病毒驱动的第四波大流行的展开，安省的住院人数在 8 月的大部分时间里缓慢上升，但现在已经相对稳定了几个星期。</p>
+<p>科学小组周二发布的模型显示，我们目前所处的轨迹表明，入住重症监护室（ICU）的 COVID 患者人数将从周一的 180 人逐渐增加到 10 月底的接近 300 人。</p>
+<p>但模型也表示，重症监护室入住率快速增加的高风险可以“通过谨慎的方法和早期预防”来消除。</p>
+<p>卫生厅长叶励雅 (Christine Elliott) 的一位发言人周二说：“今天的模型进一步证明，由于安省采取极其谨慎的做法，包括保持室内戴口罩等强有力的公共卫生措施，该省的公共卫生和医疗保健指标保持稳定或正在改善。”</p>
+<h2>染疫长期患者给医疗系统带来负担</h2>
+<p>该模型于周二下午直接发布到科学小组的网站上，虽然模型描绘了一幅大体乐观的图景，但也警告说，随着安省试图制定摆脱大流行的路线，前方的道路会很艰难。</p>
+<p>科学小组说，大约十分之一的 COVID-19 感染者的症状会持续超过 12 周，这可能会给医疗保健系统带来“重大负担”。</p>
+<p>科学家们还指出，已经有越来越多的证据表明感染 COVID-19 的人患有新的慢性病，??并且“医疗保健利用率更高”。</p>
+<p>他们警告说：“感染COVID-19 后的状况，或长期 COVID症状将极大地影响成千上万安省人的健康。”</p>
+<p>责任编辑：严枫</p>
 
-<h6></h6>
-<hr>[replace]（<a href=<ahref;<a href=<ahref;"https://www.epochtimes.com/gb/2=><a href="https://github.com/yvrwxa344/djy/blob/master/gb/2;  = ;		= ;script=a;http://cn.epochtimes.com/gb/=https://github.com/yvrwxa344/djy/blob/master/gb/;http://www.epochtimes.com/gb/=https://github.com/yvrwxa344/djy/blob/master/gb/;https://www.epochtimes.com/gb/=https://github.com/yvrwxa344/djy/blob/master/gb/;.html=.md#1;.htm=.md#1;" height=" b;/i6/=https://www.epochtimes.com/i6/;<iframe=<a;/iframe>=/a>
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/20/12/31/n12657159.md#1">组图：日本疫情严峻 东京新增逾1300例确诊</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/21/1/4/n12665577.md#1">组图：日本疫情扩大 首相考虑发布紧急宣言</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/21/1/8/n12675319.md#1">组图：日本疫情严峻 菅义伟发布紧急宣言</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/21/1/14/n12687368.md#1">组图：日本疫情严峻 紧急状态扩增7个地区</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/21/4/27/n12909094.md#1">安省疫情严重社区年满45岁居民可打疫苗</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/21/5/12/n12943511.md#1">5月12日 安省疫情减缓 新增2320例 死亡32例</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/21/8/11/n13155873.md#1">安省疫情指南： 完全接种疫苗者仍需检测病毒</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/21/8/25/n13187334.md#1">首席卫生官：安省疫情再起 至少持续6至8个月</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/5/n13752949.md#1">多伦多60%公共饮水喷泉未启动  居民不满</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/5/n13752945.md#1">安省大选 保守党获得席位逼近历史纪录</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/5/n13752942.md#1">安省公园免费玩 多伦多图书馆出借通行证</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/5/n13752933.md#1">邓德华辞去安省自由党领袖职位</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/5/n13752939.md#1">多伦多9湖滩恢复救生员驻守</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751427.md#1">加拿大安省保守党再赢多数席位 福特当选省长</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/1/n9792275.md#1" target="_blank">张东园：中共建党谎言与“一大”代表的悲惨命运</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/20/n11268195.md#1" target="_blank">以色列母亲修大法学会聆听 亲子关系更融洽</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/10/n10207223.md#1" target="_blank">共产暴政录：儿子告发母亲致其母被处决</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/12/12/28/n3763495.md#1" target="_blank">洪愿：告诉你真实的法轮功（一）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/2/21/n13594785.md#1">【未解之谜】拿地球人做实验？外星人意欲何为？</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/6/n13625395.md#1">日本寺庙有300年前人鱼木乃伊 长30公分</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/2/25/n13605650.md#1">沈纯良娶盲妻 源于前世一笑一怒之报</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/2/26/n13607219.md#1">最是美丽的季节  错过了惊蛰将错过什么呢？</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/7/n13629325.md#1">【远见快评】俄方谈判漫天要价 解析战争根源</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/7/n13628809.md#1">【微视频】俄罗斯若被拖残 中共倒台时机出现</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/7/n13629304.md#1">【新闻看点】俄掌握乌总统藏身地？西方做2准备</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/1/n13612944.md#1">专家点评：七类对心脏健康最不好的食物</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/6/n13626434.md#1">一位医生分享：常吃五种食物 大大增强免疫</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/2/n13616600.md#1">俄乌战 习近平对普京误判 北京恐陷入风险</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/6/n13626756.md#1">逾10位港星改名都各有原因 李佳芯为身体健康</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/6/n13626613.md#1">高圆圆自认表演天赋不够 曾抗拒别人谈她的容貌</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/5/n13623650.md#1">CUBE娱乐与徐穗珍解约 公布霸凌案调查结果</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/6/n13626449.md#1">瑞莎曝乌克兰惨况 发文感谢台湾援助家乡</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/7/n13629121.md#1">声援铁链女 中国导演胡雪杨发布同类题材新片</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/4/n13622027.md#1">西兰花让动脉变柔软！六大蔬菜保护心脏</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/5/n13624381.md#1">茄子可防动脉硬化 烹煮3个技巧避免变色</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/6/n13625094.md#1">当季水果鲜甜营养 吃对了就不容易生病</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/5/n13624142.md#1">【健康1+1】比尔盖茨：下场流行将至 疫苗过时？</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/2/26/n13606897.md#1">雨天鞋子湿掉怎么办？4方法可速干、不发臭</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751795.md#1">【方菲访谈】林培瑞：六四与今天的中国（上）</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752411.md#1">【时事军事】苏-35S被米格-29击落 刺痛了谁？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751784.md#1">中国最富城市之一深圳降薪 钱荒引爆民怨</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751624.md#1">中共吹嘘“最大常规航母” 分析：美国早已淘汰</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751705.md#1">外交人事洗牌 杨洁篪王毅继任人选引猜测</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/2/n13751191.md#1">客串韩剧下周播 范冰冰晒运动瘦身照宣传造势</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yvrwxa344/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yvrwxa344/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/28/n13267497.htm"></a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/28/n13267497.htm">新疫情模型公布 安省11月不可能完全解封</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yvrwxa344/djy/blob/master/gb/21/9/28/n13267497.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yvrwxa344/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yvrwxa344/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yvrwxa344/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/auytan380/djy/blob/master/gb/21/9/28/n13267497.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
